side menue shows and hides well

--- a/index.html
+++ b/index.html
@@ -9,14 +9,71 @@
 		/>
 
 		<link rel="stylesheet" href="styles.css" />
+		<script>
+			let side_appear = true;
+			function toggle_todo_list() {
+				// alert("toggle todo list");
+				let side_div = document.getElementById("side-div");
+				let main_content_div = document.getElementById(
+					"main-content-div"
+				);
+
+				if (side_appear) {
+					side_div.style.display = "none";
+					side_div.setAttribute("widthRatio", 0);
+					main_content_div.setAttribute("widthRatio", 1);
+				} else {
+					side_div.style.display = "block";
+
+					side_div.setAttribute("widthRatio", 0.2);
+					main_content_div.setAttribute("widthRatio", 0.8);
+				}
+				side_appear = !side_appear;
+				resize_window();
+			}
+			function resize_window() {
+				var w = window.outerWidth;
+				var h = window.outerHeight;
+
+				var txt = "Window size: width=" + w + ", height=" + h;
+				console.log(txt);
+				let main_content_div = document.getElementById(
+					"main-content-div"
+				);
+				let side_div = document.getElementById("side-div");
+				let main_div = document.getElementById("main-div");
+				console.log(main_div);
+				main_div.style.height = `${h * 0.9}px`;
+
+				main_content_div.style.width = `${
+					(w - 40) * main_content_div.getAttribute("widthRatio")
+				}px`;
+				side_div.style.width = `${
+					(w - 40) * side_div.getAttribute("widthRatio")
+				}px`;
+
+				console.log(main_content_div);
+				console.log(side_div);
+			}
+			document.addEventListener("DOMContentLoaded", resize_window);
+		</script>
 	</head>
 
-	<body>
-		<h1 style="text-align: center">task organizer</h1>
+	<body onresize="resize_window()">
+		<!-- <h1 style="text-align: center">task organizer</h1> -->
 		<div id="main-div">
-			<div id="side-div">koko wawa</div>
+			<div id="icon-div">
+				<img
+					class="icon-img"
+					src="./images/to-do-list.svg"
+					onclick="toggle_todo_list()"
+					alt=""
+				/>
+			</div>
+			<div id="side-div" widthRatio=".2">koko wawa</div>
+			<div id="main-content-div" widthRatio=".8"></div>
 		</div>
-
+		<footer>2020 mohammed ibrahim</footer>
 		<script></script>
 		<script src="views.js"></script>
 	</body>
