separated css files

--- a/index.html
+++ b/index.html
@@ -7,56 +7,10 @@
 			http-equiv="Content-Security-Policy"
 			content="script-src 'self' 'unsafe-inline';"
 		/>
-
-		<link rel="stylesheet" href="styles.css" />
-		<script>
-			let side_appear = true;
-			function toggle_todo_list() {
-				// alert("toggle todo list");
-				let side_div = document.getElementById("side-div");
-				let main_content_div = document.getElementById(
-					"main-content-div"
-				);
-
-				if (side_appear) {
-					side_div.style.display = "none";
-					side_div.setAttribute("widthRatio", 0);
-					main_content_div.setAttribute("widthRatio", 1);
-				} else {
-					side_div.style.display = "block";
-
-					side_div.setAttribute("widthRatio", 0.2);
-					main_content_div.setAttribute("widthRatio", 0.8);
-				}
-				side_appear = !side_appear;
-				resize_window();
-			}
-			function resize_window() {
-				var w = window.outerWidth;
-				var h = window.outerHeight;
-
-				var txt = "Window size: width=" + w + ", height=" + h;
-				console.log(txt);
-				let main_content_div = document.getElementById(
-					"main-content-div"
-				);
-				let side_div = document.getElementById("side-div");
-				let main_div = document.getElementById("main-div");
-				console.log(main_div);
-				main_div.style.height = `${h - 80}px`;
-
-				main_content_div.style.width = `${
-					(w - 40) * main_content_div.getAttribute("widthRatio")
-				}px`;
-				side_div.style.width = `${
-					(w - 40) * side_div.getAttribute("widthRatio")
-				}px`;
-
-				console.log(main_content_div);
-				console.log(side_div);
-			}
-			document.addEventListener("DOMContentLoaded", resize_window);
-		</script>
+		<link rel="stylesheet" href="css/side-div.css" />
+		<link rel="stylesheet" href="css/styles.css" />
+		<link rel="stylesheet" href="css/todo-div.css" />
+		<script src="./UI-refresher.js"></script>
 	</head>
 
 	<body onresize="resize_window()">
@@ -70,7 +24,7 @@
 					alt=""
 				/>
 			</div>
-			<div id="side-div" widthRatio=".2">koko wawa</div>
+			<div id="side-div" widthRatio=".2"></div>
 			<div id="main-content-div" widthRatio=".8"></div>
 		</div>
 		<footer id="main-footer">2020 mohammed ibrahim</footer>
