modified the old path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="css/side-div.css" />
 		<link rel="stylesheet" href="css/styles.css" />
 		<link rel="stylesheet" href="css/todo-div.css" />
-		<script src="./UI-refresher.js"></script>
+		<script src="./ui/UI-refresher.js"></script>
 	</head>
 
 	<body onresize="resize_window()">
