solved save issue

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
 					alt=""
 				/>
 			</div>
-			<div id="side-div" widthRatio=".2"></div>
+			<div id="side-content-div">
+				<!-- <div id="side-div" widthRatio=".2">
+					<div id="side-control">side-control</div>
+					<div id="side-content">
+						<div class="list-item">koko</div>
+					</div>
+				</div> -->
+			</div>
 			<div id="main-content-div" widthRatio=".8"></div>
 		</div>
 		<footer id="main-footer">2020 mohammed ibrahim</footer>
