--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 		<link rel="stylesheet" href="css/side-div.css" />
 		<link rel="stylesheet" href="css/styles.css" />
 		<link rel="stylesheet" href="css/todo-div.css" />
-		<script src="./ui/UI-refresher.js"></script>
 	</head>
 
 	<body onresize="resize_window()">
@@ -36,6 +35,9 @@
 		</div>
 		<footer id="main-footer">2020 mohammed ibrahim</footer>
 		<script></script>
+		<script src="./ui/UI-refresher.js"></script>
+
 		<script src="views.js"></script>
+		<script src="communication.js"></script>
 	</body>
 </html>
